--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     ]
   },
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "cors": "^2.7.1",
+    "express": "^4.14.0",
     "underbar": "^0.1.0",
     "underscore": "^1.8.3"
   }
