--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "body-parser": "^1.15.2",
     "cors": "^2.7.1",
     "express": "^4.14.0",
+    "nodemon": "^1.9.2",
     "underbar": "^0.1.0",
     "underscore": "^1.8.3"
   }
